<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- <resources> -->

    <string name="app_name">台灣實時輻射</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">設定</string>
    <string name="alert_title">自動預警</string>
    <string name="alert_summary">自動更新，超標預警</string>
    <string name="autoupdate_frequency_title">更新頻率</string>
    <string name="location_summary"><xliff:g id="location_select">%1$s</xliff:g></string>
    <string name="autoupdate_frequency_summary"><xliff:g id="timeout_description">%1$s</xliff:g></string>
    <string name="autoupdate_frequency_key">autoupdate_frequency</string>
    <string name="cancel">取消</string>
    <string name="alert_key">alert_key</string>
    <string name="location_key">location_key</string>
    <string name="location">地點</string>
    <string name="about"> 項目網址：<a href="https://github.com/npes87184/Taiwan_Radiation">My GitHub</a></string>
    <string name="auto_update_frequency_default_value">60</string>
    <string name="location_default_value">6</string>
    <string name="title_activity_map_view">台灣實時輻射</string>
    <string name="app_website"> <a href="http://home.gamer.com.tw/creationDetail.php?sn=2479897">更多資訊</a></string>
    <string name="problem"> 如果您在使用中遇到問題，可以到 <a href="http://home.gamer.com.tw/creationDetail.php?sn=2479897">此網頁</a> 聯繫我，感謝您的使用。</string>

</resources>
