<?xml version="1.0" encoding="utf-8"?>
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/title_activity_setting">
        <CheckBoxPreference android:title="@string/alert_title" android:summary="@string/alert_summary" android:key="@string/alert_key" android:defaultValue="false" android:icon="@drawable/ic_menu_refresh"/>
        <ListPreference android:entryValues="@array/auto_update_frequency_value" android:entries="@array/auto_update_frequency_entry" android:dialogTitle="@string/autoupdate_frequency_title" android:negativeButtonText="@string/cancel" android:key="@string/autoupdate_frequency_key" android:title="@string/autoupdate_frequency_title" android:dependency="@string/alert_key" android:defaultValue="@string/auto_update_frequency_default_value" android:summary="@string/autoupdate_frequency_summary" android:icon="@drawable/ic_menu_recent_history"/>
        <ListPreference android:entryValues="@array/location_value" android:entries="@array/location_entry" android:dialogTitle="@string/location" android:negativeButtonText="@string/cancel" android:key="@string/location_key" android:title="@string/location" android:dependency="@string/alert_key" android:defaultValue="@string/location_default_value" android:summary="@string/location_summary" android:icon="@drawable/ic_menu_myplaces"/>
        <Preference android:key="ota" android:title="檢查新版本" android:icon="@drawable/ic_menu_info_details"/>
    </PreferenceScreen>
